...


//
//Group: RentPropertyInfo
//
//Filepath: currant/Scene/Rent/Controller/CUTERentPropertyInfoViewController.m
"RentPropertyInfo/房产信息" = "Information";
"RentPropertyInfo/下一步" = "Next";
"RentPropertyInfo/房产信息表单" = "Property Information";
"RentPropertyInfo/周" = "week";
"RentPropertyInfo/不限" = "Unlimited";
"RentPropertyInfo/起" = "";
"RentPropertyInfo/至少租" = "Minimum Tenancy";
"RentPropertyInfo/您确定放弃发布吗？放弃后系统将会将您已填写的信息保存为草稿" = "Are you sure you want to give up? Your property will be saved as draft";
"RentPropertyInfo/放弃" = "Give Up";
"RentPropertyInfo/取消" = "Cancel";
"RentPropertyInfo/租金" = "Rental";
"RentPropertyInfo/租期" = "Tenancy Period";
"RentPropertyInfo/请更新面积" = "Please enter area";
"RentPropertyInfo/房产地址" = "Address";
"RentPropertyInfo/请编辑租金" = "Please enter rental";
"RentPropertyInfo/租金不能为0" = "Rental should not be 0";
"RentPropertyInfo/请添加房产的Postcode" = "Please add property's Postcode";
"RentPropertyInfo/请添加房产位置" = "请添加房产位置";
"RentPropertyInfo/学校，地铁" = "University, Station";
"RentPropertyInfo/您的房产地址已经变更，请重新编辑房源的周边" = "您的房产地址已经变更，请重新编辑房源的周边";
...


//
//Group: RentAddressEdit
//
//Filepath: currant/Scene/Rent/Controller/CUTERentAddressEditViewController.m
"RentAddressEdit/继续" = "Continue";
"RentAddressEdit/地址编辑表单" = "Address";
"RentAddressEdit/请填写Postcode" = "Please enter Postcode";
"RentAddressEdit/OK" = "OK";
"RentAddressEdit/新Postcode定位失败，前往地图手动修改房产位置，返回房产信息则不添加房产位置" = "We can't locate new Postcode, please update location manually, we will ignore location if you return without update it";
"RentAddressEdit/新Postcode定位失败，前往地图手动修改房产位置" = "We can't locate new Postcode, please update location manually";
"RentAddressEdit/返回" = "Back";
"RentAddressEdit/前往地图" = "Go To Map";
"RentAddressEdit/请前往地图手动修改房产位置，返回房产信息则不添加房产位置" = "Please go to the map to update location manually";
"RentAddressEdit/定位不到房产位置，请返回地图更新房产位置" = "We can't location your property ,please go back to update location";
...
"RentAddressEdit/请填写城市" = "Please enter city";
"RentAddressEdit/新Postcode定位失败，返回地图手动修改房产位置，继续下一步则不添加房产位置" = "We can't locate New Postcode, please update location manually, we will ignore location if you continue without update it";
"RentAddressEdit/下一步" = "Next Step";
"RentAddressEdit/请返回地图手动修改房产位置，继续下一步则不添加房产位置" = "Please go back to the map and update location manually, pwe will ignore location if you continue without update it";

//Filepath: currant/Scene/Rent/Form/CUTERentAddressEditForm.m
"RentAddressEdit/Postcode" = "Postcode";
"RentAddressEdit/街道（选填）" = "Street (Optional)";
"RentAddressEdit/小区（选填）" = "Community (Optional)";
"RentAddressEdit/楼层（选填）" = "Floor (Optional)";
"RentAddressEdit/房间号（选填）" = "No. (Optional)";
"RentAddressEdit/国家" = "Country";
"RentAddressEdit/地址" = "Address";
...
"RentPassword/请获取验证码" = "Please receive SMS verification code";
"RentPassword/验证码不正确" = "Verification code is not correct";
"RentPassword/修改成功" = "Modify success";

//Filepath: currant/Scene/User/Form/CUTERentPasswordForm.m
"RentPassword/国家" = "Country";
"RentPassword/手机号" = "Phone Number";
"RentPassword/手机验证码" = "Verification code";
"RentPassword/新密码" = "New Password";
"RentPassword/确认新密码" = "Confirm New Password";
"RentPassword/重置" = "Reset Password";


...

//
//Group: Splash
//
//Filepath: currant/Scene/Splash/CUTESplashViewController.m
"Splash/引导页面" = "Guideline";
"Splash/进入应用" = "Launch Application";
"Splash/房东直租工具" = "List your space with YoungFunding Property";
"Splash/杂志般的房产展示" = "Magazine-like property demostration";
"Splash/一次发布，传遍全英" = "Publish to entire UK once you list your space";
"Splash/三步发布出租房，不用费力思考" = "3 simple steps, hassle free";
"Splash/分享至朋友圈，高大上的阅读体验" = "Share to Wechat Moments, excellent reading experience";
"Splash/全国各大平台均可看到你的房产信息" = "List your space on major UK rental markets";
...
"RentLogin/登录中..." = "Logging in...";
"RentLogin/确认联系方式展示" = "Confirm contact display";

//Filepath: currant/Scene/User/Form/CUTERentLoginForm.m
"RentLogin/国家" = "Country";
"RentLogin/手机号" = "Phone Number";
"RentLogin/密码" = "Password";
"RentLogin/登录" = "Login";
"RentLogin/通过短信重置密码" = "Reset Password via SMS";
"RentLogin/忘记密码？" = "Forgot Password ?";
"RentLogin/通过邮箱重置密码" = "Reset Password via Email";


...
//
//Filepath: currant/Misc/CUTEPhoneUtil.m
"PhoneUtil/联系洋房东" = "Contact Us";
"PhoneUtil/取消" = "Cancel";
"PhoneUtil/英国" = "UK";
"PhoneUtil/中国" = "China";
"PhoneUtil/电话不可用" = "Phone unavaliable";
"PhoneUtil/OK" = "OK";


//
//Group: TimePeriod
//
...

//
//Group: RentShare
//
//Filepath: currant/Scene/Rent/Controller/CUTERentShareViewController.m
"RentShare/发布成功" = "Publish successfully";
"RentShare/完成" = "Done";
"RentShare/编辑" = "Edit";
"RentShare/获取失败" = "Loading failed";
"RentShare/分享" = "Share";

//Filepath: currant/Scene/Rent/Form/CUTERentShareForm.m
"RentShare/查看我的房源移动主页" = "View My Property";
...


//
//Group: RentTypeList
//
//Filepath: currant/Scene/Rent/Controller/CUTERentTypeListViewController.m
"RentTypeList/出租发布" = "List Your Space";
"RentTypeList/出租类型" = "Rent Type";
"RentTypeList/出租类型列表" = "List of rent type";
"RentTypeList/您有整套或单间房源要出租？\n从这里开始免费发布！" = "Whether you wish to rent out your entire place or simply a single room, start your listing here!";

//Filepath: currant/Scene/Rent/Form/CUTERentTypeListForm.m
"RentTypeList/出租类型" = "Rent Type";


//
//Group: UnfinishedRentTicketList
//
//Filepath: currant/Scene/Rent/Controller/CUTEUnfinishedRentTicketListViewController.m
"UnfinishedRentTicketList/创建" = "Create";
"UnfinishedRentTicketList/出租房草稿" = "Draft";
"UnfinishedRentTicketList/出租房草稿列表" = "List of Draft";


//
//Group: AppDelegate
//
//Filepath: currant/AppDelegate.m
"AppDelegate/洋房东" = "YoungFunding Property";
"AppDelegate/出租发布" = "List Your Space";
"AppDelegate/主页" = "Homepage";
"AppDelegate/发布" = "List Your Space";
"AppDelegate/新房" = "For Sale";
"AppDelegate/租房" = "For Rent";
"AppDelegate/我" = "Profile";
"AppDelegate/发布租房" = "List Your Space";
"AppDelegate/已发布" = "My Listings";
"AppDelegate/同步中..." = "Syncing...";
"AppDelegate/获取验证中..." = "Loading...";
"AppDelegate/您的语言偏好与当前系统语言不一致，您可以在“我” -> “设置” 中设置语言" = "Your language preference is not the system language you are using, you can change your language setting in \"Profile\" -> \"Setting\"";

...
//
//Group: AppUpdate
//
"What's New:" = "What's New: ";
"You already have the lastest version" = "You already have the lastest version";
"App Update:" = "App Update: ";
"New Version Available" = "New Version Available";
"Later" = "Later";
"Update" = "Update";



//
//Group: Common
...
